dataset1235/2025-2/1379599236/users/3204213742/executions/2277843042_2667036473.log
== RUN (2025-08-17 21:05:48)
-- CODE: 
c = float(input("graus:"))

k = c + 273.15

print(,round(k. 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 5
    print(,round(k. 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 5
    print(,round(k. 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 5
    print(,round(k. 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 5
    print(,round(k. 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 5
    print(,round(k. 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 5
    print(,round(k. 2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-17 21:06:56)
-- CODE: 
c = float(input("graus:"))

k = c + 273.15

print(round(k, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
graus:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
graus:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
graus:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
graus:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
graus:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
graus:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 21:05:26)
-- CODE: 
c = float(input("graus:"))

k = c + 273.15

print("kelvin:",round(k, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 5
    print("kelvin:",round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 5
    print("kelvin:",round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 5
    print("kelvin:",round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 5
    print("kelvin:",round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 5
    print("kelvin:",round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 5
    print("kelvin:",round(k, 2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 21:06:48)
-- CODE: 
c = float(input("graus:"))

k = c + 273.15

print(round(k, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
graus:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
graus:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
graus:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
graus:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
graus:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
graus:303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 21:05:41)
-- CODE: 
c = float(input("graus:"))

k = c + 273.15

print(,round(k, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 5
    print(,round(k, 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 5
    print(,round(k, 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 5
    print(,round(k, 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 5
    print(,round(k, 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 5
    print(,round(k, 2)
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 5
    print(,round(k, 2)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-17 21:06:09)
-- CODE: 
c = float(input("graus:"))

k = c + 273.15

print(round(k, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 5
    print(round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 5
    print(round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 5
    print(round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 5
    print(round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 5
    print(round(k, 2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 5
    print(round(k, 2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
